@@ -11,6 +11,6 @@
 #define HAVE_ZLIB 1
 #define HAVE_ZLIB_COMPRESS2 1
 
-#define VERSION "20190503"
+#define VERSION "20190522"
 
 #define ZLIB_CONST 1
