@@ -5,16 +5,20 @@
 
 # Test file prepared by Yannis Haralambous in 2009.
 
-exit 0 # temp until fixed
+#exit 0 # temp until fixed
 
 test -d tests || mkdir -p tests
 
 cp $srcdir/tests/yannis.aux tests/xyannis.aux
 
-TEXMFCNF=$srcdir/../kpathsea \
-  BSTINPUTS=$srcdir/../web2c/tests \
-  BIBINPUTS=$srcdir/tests \
-  ./bibtexu -l fr -o fr tests/xyannis || exit 1
+TEXMFCNF=$srcdir/../kpathsea; export TEXMFCNF
+BSTINPUTS=$srcdir/../web2c/tests; export BSTINPUTS
+BIBINPUTS=$srcdir/tests; export BIBINPUTS
+if ./bibtexu -l fr -o fr -t -d all tests/xyannis; then :; else
+  echo "bibtexu failed, tests/xyannis.blg is:" >&2
+  cat tests/xyannis.blg >&2
+  exit 1
+fi
 
 diff $srcdir/tests/yannis.bbl tests/xyannis.bbl || exit 1
 
